Closed Bug 1731599 Opened 3 years ago Closed 3 years ago

Permanent cranelift/builds/worker/checkouts/gecko/js/src/wasm/WasmCraneliftCompile.cpp:446:25: error: no member named 'length' in 'RefPtr<js::wasm::TypeContext>'; did you mean to use '->' instead of '.'?

Categories

(Core :: JavaScript: WebAssembly, defect, P5)

defect

Tracking

()

RESOLVED FIXED
94 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- unaffected
firefox93 --- unaffected
firefox94 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: rhunt)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: archaeopteryx [at] coole-files.de
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=351977079&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/UNgvEl1ATKimtT4OKBY8wA/runs/0/artifacts/public/logs/live_backing.log


[task 2021-09-18T10:08:24.511Z]  2:32.49 /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o Unified_cpp_js_src_wasm1.o -c  -I/builds/worker/workspace/obj-spider/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -ftrivial-auto-var-init=pattern -DDEBUG=1 -DWASM_SUPPORTS_HUGE_MEMORY -DJS_CACHEIR_SPEW -DJS_STRUCTURED_SPEW -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/checkouts/gecko/js/src/wasm -I/builds/worker/workspace/obj-spider/js/src/wasm -I/builds/worker/workspace/obj-spider/js/src -I/builds/worker/checkouts/gecko/js/src -I/builds/worker/workspace/obj-spider/dist/include -I/builds/worker/workspace/obj-spider/dist/include/nspr -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-spider/js/src/js-confdefs.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wshadow-uncaptured-local -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wcomma -Wenum-compare-conditional -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=free-nonheap-object -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-psabi -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-spider/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Werror -fno-strict-aliasing -Werror=format -Wno-shadow -fexperimental-new-pass-manager  -MD -MP -MF .deps/Unified_cpp_js_src_wasm1.o.pp   Unified_cpp_js_src_wasm1.cpp
[task 2021-09-18T10:08:24.512Z]  2:32.49 In file included from Unified_cpp_js_src_wasm1.cpp:38:
[task 2021-09-18T10:08:24.512Z]  2:32.49 /builds/worker/checkouts/gecko/js/src/wasm/WasmCraneliftCompile.cpp:446:25: error: no member named 'length' in 'RefPtr<js::wasm::TypeContext>'; did you mean to use '->' instead of '.'?
[task 2021-09-18T10:08:24.512Z]  2:32.49   return env->env->types.length();
[task 2021-09-18T10:08:24.512Z]  2:32.49                         ^
[task 2021-09-18T10:08:24.512Z]  2:32.49                         ->
[task 2021-09-18T10:08:24.512Z]  2:32.49 /builds/worker/checkouts/gecko/js/src/wasm/WasmCraneliftCompile.cpp:450:38: error: no matching member function for call to 'funcType'
[task 2021-09-18T10:08:24.513Z]  2:32.49   return &env->env->types[typeIndex].funcType();
[task 2021-09-18T10:08:24.513Z]  2:32.49           ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
[task 2021-09-18T10:08:24.513Z]  2:32.49 /builds/worker/checkouts/gecko/js/src/wasm/WasmTypeDef.h:581:13: note: candidate function not viable: requires single argument 'index', but no arguments were provided
[task 2021-09-18T10:08:24.513Z]  2:32.49   FuncType& funcType(uint32_t index) { return types_[index].funcType(); }
[task 2021-09-18T10:08:24.513Z]  2:32.49             ^
[task 2021-09-18T10:08:24.513Z]  2:32.49 /builds/worker/checkouts/gecko/js/src/wasm/WasmTypeDef.h:582:19: note: candidate function not viable: requires single argument 'index', but no arguments were provided
[task 2021-09-18T10:08:24.513Z]  2:32.49   const FuncType& funcType(uint32_t index) const {
[task 2021-09-18T10:08:24.513Z]  2:32.49                   ^
[task 2021-09-18T10:08:24.513Z]  2:32.49 /builds/worker/checkouts/gecko/js/src/wasm/WasmTypeDef.h:585:13: note: candidate function not viable: requires single argument 't', but no arguments were provided
[task 2021-09-18T10:08:24.513Z]  2:32.49   FuncType& funcType(RefType t) { return funcType(t.typeIndex()); }
[task 2021-09-18T10:08:24.513Z]  2:32.49             ^
[task 2021-09-18T10:08:24.513Z]  2:32.49 /builds/worker/checkouts/gecko/js/src/wasm/WasmTypeDef.h:586:19: note: candidate function not viable: requires single argument 't', but no arguments were provided
[task 2021-09-18T10:08:24.513Z]  2:32.49   const FuncType& funcType(RefType t) const { return funcType(t.typeIndex()); }
[task 2021-09-18T10:08:24.514Z]  2:32.49                   ^
[task 2021-09-18T10:08:24.514Z]  2:32.49 In file included from Unified_cpp_js_src_wasm1.cpp:38:
[task 2021-09-18T10:08:24.514Z]  2:32.49 /builds/worker/checkouts/gecko/js/src/wasm/WasmCraneliftCompile.cpp:485:42: error: no matching member function for call to 'funcType'
[task 2021-09-18T10:08:24.514Z]  2:32.49   return &env->env->types[funcTypeIndex].funcType();
[task 2021-09-18T10:08:24.514Z]  2:32.49           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
Summary: Intermittent 2:32.49 /builds/worker/checkouts/gecko/js/src/wasm/WasmCraneliftCompile.cpp:446:25: error: no member named 'length' in 'RefPtr<js::wasm::TypeContext>'; did you mean to use '->' instead of '.'? → Permanent cranelift/builds/worker/checkouts/gecko/js/src/wasm/WasmCraneliftCompile.cpp:446:25: error: no member named 'length' in 'RefPtr<js::wasm::TypeContext>'; did you mean to use '->' instead of '.'?
Assignee: nobody → rhunt
Status: NEW → ASSIGNED
Flags: needinfo?(rhunt)
Pushed by rhunt@eqrion.net:
https://hg.mozilla.org/integration/autoland/rev/76609866dcad
wasm: Fix cranelift bustage. r=lth
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: