Bug 1731599 - wasm: Fix cranelift bustage. r=lth

Differential Revision: https://phabricator.services.mozilla.com/D126294